--- a/standard-layout/css/style.css
+++ b/standard-layout/css/style.css
@@ -1,7 +1,28 @@
 @charset "UTF-8";
 
+/* 全体のスタイル */
 html {
+  font-size: 62.5%;
 }
+body {
+  color: #333;
+  font-size: 1.2rem;
+  font-family: "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+a:link,
+a:visited,
+a:hover,
+a:active {
+  color: #d03c56;
+  text-decoration: none;
+}
+
+/* 各クラスのスタイル */
 .header {
   width: 100%;
 }
@@ -27,6 +48,7 @@ html {
   clear: both;
 }
 
+/* temporally style */
 .header,
 .main,
 .sidemenu,
