--- a/standard-layout/css/style.css
+++ b/standard-layout/css/style.css
@@ -25,6 +25,9 @@ a:active {
 /* 各クラスのスタイル */
 .header {
   width: 100%;
+  padding: 28px 0 10px;
+  background: url('../images/bg-header.gif') repeat-x;
+  box-shadow: 0 0 10px 1px #e3e3e3;
 }
 .wrapper {
   width: 970px;
